tests/NormalTests/paczka1/fuzzy1/87116495.err
Error in line 8: rn75DYBFt S690 37,0
Error in line 3: B45lPi9w A175 9,8
Error in line 22: B45lPi9w S158 60,6
Error in line 24: A175 S79 24,6
